enable_testing()

if(BUILD_WITH_LIBCXX)
  if(NOT TARGET gtest)
    add_subdirectory("/usr/src/googletest" "${CMAKE_BINARY_DIR}/googletest-build" EXCLUDE_FROM_ALL)
  endif()
  if(NOT TARGET GTest::gtest)
    add_library(GTest::gtest ALIAS gtest)
  endif()
  if(NOT TARGET GTest::gtest_main)
    add_library(GTest::gtest_main ALIAS gtest_main)
  endif()
else()
  find_package(GTest REQUIRED)
endif()

find_package(Boost REQUIRED COMPONENTS log thread)

include(GoogleTest)

add_executable(omnifiber_test_fiber test_fiber.cpp)
target_link_libraries(omnifiber_test_fiber PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_fiber PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_fiber PRIVATE -fsanitize=address -rdynamic)
gtest_discover_tests(omnifiber_test_fiber)

add_executable(omnifiber_test_coroutine test_coroutine.cpp)
target_link_libraries(omnifiber_test_coroutine PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_coroutine PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_coroutine PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_coroutine)

add_executable(omnifiber_test_get_current_fiber test_get_current_fiber.cpp)
target_link_libraries(omnifiber_test_get_current_fiber PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_get_current_fiber PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_get_current_fiber PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_get_current_fiber)

add_executable(omnifiber_test_asio test_asio.cpp)
target_link_libraries(omnifiber_test_asio PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_asio PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_asio PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_asio)

add_executable(omnifiber_test_fiber_exceptions test_fiber_exceptions.cpp)
target_link_libraries(omnifiber_test_fiber_exceptions PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_fiber_exceptions PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_fiber_exceptions PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_fiber_exceptions)

add_executable(omnifiber_test_event test_event.cpp)
target_link_libraries(omnifiber_test_event PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_event PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_event PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_event)

add_executable(omnifiber_test_pipe test_pipe.cpp)
target_link_libraries(omnifiber_test_pipe PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_pipe PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_pipe PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_pipe)

add_executable(omnifiber_test_select test_select.cpp)
target_link_libraries(omnifiber_test_select PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_select PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_select PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_select)

add_executable(omnifiber_test_select_pair_list test_select_pair_list.cpp)
target_link_libraries(omnifiber_test_select_pair_list PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_select_pair_list PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_select_pair_list PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_select_pair_list)

add_executable(omnifiber_test_select_pair_dynamic_list test_select_pair_dynamic_list.cpp)
target_link_libraries(omnifiber_test_select_pair_dynamic_list PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_select_pair_dynamic_list PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_select_pair_dynamic_list PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_select_pair_dynamic_list)

add_executable(omnifiber_test_remote_call test_remote_call.cpp)
target_link_libraries(omnifiber_test_remote_call PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_remote_call PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_remote_call PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_remote_call)

add_executable(omnifiber_test_mutex_cv test_mutex.cpp)
target_link_libraries(omnifiber_test_mutex_cv PRIVATE omni-fiber-asan GTest::gtest_main Boost::log Boost::thread)
target_compile_options(omnifiber_test_mutex_cv PRIVATE -fsanitize=address)
target_link_options(omnifiber_test_mutex_cv PRIVATE -fsanitize=address)
gtest_discover_tests(omnifiber_test_mutex_cv)

